substrate/primitives/runtime-interface/tests/ui/no_method_implementation.stderr
error: Methods need to have an implementation.
  --> tests/ui/no_method_implementation.rs:22:2
   |
22 |     fn test();
   |     ^^
